# ocaml-mecab-dune

./: LICENSE  dune-project  mecab.opam
bindings/: dune  mecab_stubs.ml
src/: dune  ffi.ml  mecab.ml
stub-generator/: dune  mecab_stub_generator.ml
test/: dune
